assets/main.css
html {
  height: 100%;
}

body {
  margin: 0;
  min-height: 100%;
  background: url(background.jpg) no-repeat center center fixed;
  background-size: cover;
  overflow: hidden;
}

#card {
  font-family: 'Exo 2', sans-serif;
  font-size: 18px;
  font-weight: 300;
  position: fixed;
  top: 50%;
  left: 50%;
  width: 630px;
  height: 880px;
  color: #fff;
  transform: translate(-50%, -50%);
  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, .4));
  transition: all 0.5s ease-in-out;
}

#card.fold {
  margin-top: 50vh;
  height: 220px;
  overflow: hidden;
}

#fold-toggle {
  position: fixed;
  top: 0;
  right: 0;
  width: 100px;
  height: 100px;
  cursor: pointer;
}

#fold-toggle .icon {
  display: inline-block;
  padding: 35px 35px 15px 15px;
  text-align: center;
}

#fold-toggle .icon:before {
  content: '';
  display: block;
  width: 50px;
  height: 50px;
  background: url(arrow_down.svg) no-repeat;
  position: relative;
  transition: all 0.5s ease-in-out;
  transform: rotate(180deg);
}

#card a {
  color: #fff;
  font-weight: 600;
  text-decoration: none;
}

#card .content {
  height: 100%;
  width: 100%;
  background: url(pattern.svg) -30px, repeating-linear-gradient(45deg, #543270 0, #342e70 200px, #543270 400px);
  clip-path: polygon(0 0, calc(100% - 100px) 0, 100% 100px, 100% 100%, 0 100%);
}

#ingress-logo {
  position: absolute;
  left: -200px;
  top: 10px;
  width: 160px;
  height: 138px;
  background: url(ingress-logo.svg) no-repeat;
}

@keyframes enter-exit-zoom {

  0%,
  100% {
    transform: scale(0.8);
    opacity: 0;
  }

  5%,
  60% {
    transform: scale(1);
    opacity: 1;
  }

  70% {
    opacity: 0;
  }
}


#ingress-logo .badge {
  position: relative;
  left: 30px;
  top: 2px;
  width: 100px;
  height: 100px;
  background: url(badge.png) no-repeat;
  background-size: contain;
  transform: scale(0.8);
  opacity: 0;
  animation: enter-exit-zoom 10s ease infinite;
}

#card header {
  position: absolute;
  left: 240px;
  top: 50px;
  width: 360px;
}

#card header .welcome {
  font-size: 36px;
  margin: 12px 0;
}

#card main {
  position: fixed;
  top: 210px;
  width: 100%;
}

#card .block {
  margin: 20px 30px;
  border-radius: 4px;
  overflow: hidden;
  width: calc(100% - 60px);
}

#card .block h2,
#card .block p {
  margin: 0;
  background: rgba(255, 255, 255, .05);
  padding: 8px 12px;
}

#card .block h2 {
  font-size: 22px;
  font-weight: 600;
}

#card .block.passcode h2 {
  background: #fff;
  color: #000;
  text-align: center;
  text-transform: uppercase;
}

#card .block p {
  margin-top: 2px;
}

#card .block .list {
  max-height: 100px;
  overflow-y: scroll;
  scrollbar-width: auto;
}

#card .block .list::-webkit-scrollbar {
  width: 10px;
}

#card .block .list::-webkit-scrollbar-track {
  background: rgba(255, 255, 255, .2);
  border-radius: 10px;
}

#card .block .list::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, .5);
  border-radius: 10px;
}

#card .block .list .label {
  display: inline-block;
  width: 100px;
  margin-right: 2px;
  border-radius: 4px;
  background: #fff;
  color: #543270;
  font-size: 16px;
  font-weight: 800;
  text-align: center;
  vertical-align: middle;
}

#social p {
  text-align: center;
}

#social .icon {
  display: inline-block;
  margin: 6px 16px;
  padding-top: 6px;
  text-align: center;
  width: 90px;
}

#social .icon:before {
  content: '';
  display: block;
  top: -5px;
  left: 15px;
  width: 60px;
  height: 60px;
  background: url(play.svg) no-repeat;
  position: relative;
}

#social .telegram:before {
  background-image: url(telegram.svg);
}

#social .instagram:before {
  background-image: url(instagram.svg);
}

#social .mastoden:before {
  background-image: url(mastodon.svg);
}

@media (max-height: 900px) {
  body {
    transform: scale(0.8);
  }

  #card.fold {
    margin-top: 62.5vh;
  }
}

@media (max-width: 650px),
(max-height: 750px) {
  body {
    transform: initial;
    overflow-y: scroll;
  }

  #card {
    position: relative;
    top: auto;
    left: auto;
    width: calc(100% - 40px);
    margin-top: calc(100vh - 150px) !important;
    height: auto !important;
    padding: 20px;
    transform: initial;
  }

  #fold-toggle {
    top: 20px;
    right: 20px;
  }

  #fold-toggle .icon:before {
    transform: rotate(0deg);
  }

  #card .content {
    text-align: center;
    padding-bottom: 10px;
  }

  #ingress-logo {
    position: relative;
    left: 50%;
    top: 120px;
    margin-bottom: 220px;
    transform: translateX(-50%) scale(2);
  }

  #card header {
    position: relative;
    left: auto;
    top: auto;
    width: calc(100% - 60px);
    margin: 0 30px;
  }

  #card header p {
    text-align: left;
  }

  #card main {
    position: relative;
    top: auto;
    text-align: left;
  }

  #card .block .list {
    max-height: none;
    overflow-y: auto;
  }
}

